--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waverly</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="waverly-logo-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="waverly-logo-16x16.png">
     <script src="perlin.js"></script>
   </head>
   <body>
